# back-domain/src/main/java/com/feyconsuelo/domain/model/notification/NotificationRequest.java
@@ -1,0 +1,26 @@
+package com.feyconsuelo.domain.model.notification;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+
+import java.util.List;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@EqualsAndHashCode
+public class NotificationRequest {
+
+    private String title;
+
+    private String notification;
+
+    private List<String> topics;
+
+    private List<String> tokens;
+
+}
