# back-domain/src/main/java/com/feyconsuelo/domain/model/notification/NotificationTopicResponse.java
@@ -1,0 +1,20 @@
+package com.feyconsuelo.domain.model.notification;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@EqualsAndHashCode
+public class NotificationTopicResponse {
+
+    private String topic;
+
+    private String topicName;
+
+}
