# back-domain/src/main/java/com/feyconsuelo/domain/usecase/notification/GetNotificationUserTokens.java
@@ -1,0 +1,11 @@
+package com.feyconsuelo.domain.usecase.notification;
+
+import com.feyconsuelo.domain.model.notification.NotificationUserTokenResponse;
+
+import java.util.List;
+
+public interface GetNotificationUserTokens {
+
+    List<NotificationUserTokenResponse> execute();
+
+}
